# rust-seekable-stream-cipher

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
src/: ascon.rs  chacha.rs  keccak.rs  lib.rs
