[package]
name = "seekable-stream-cipher"
version = "0.1.0"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2021"
description = "Seekable stream cipher and encryption/decryption API"
readme = "README.md"
license = "MIT"
keywords = ["crypto", "ascon", "keccak", "stream", "cipher"]
homepage = "https://github.com/jedisct1/rust-seekable-stream-cipher"
repository = "https://github.com/jedisct1/rust-seekable-stream-cipher"
categories = ["no-std", "cryptography", "wasm"]

[dependencies]
keccak = "0.1.5"

[dev-dependencies]
benchmark-simple = "0.1.9"
chacha20 = "0.9.1"
getrandom = "0.2.15"

[[bench]]
name = "benchmark"
harness = false
