[package]
name = "seekable-stream-cipher"
version = "0.2.3"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2021"
description = "Seekable stream cipher and encryption/decryption"
readme = "README.md"
license = "MIT"
keywords = ["crypto", "ascon", "keccak", "stream", "cipher"]
homepage = "https://github.com/jedisct1/rust-seekable-stream-cipher"
repository = "https://github.com/jedisct1/rust-seekable-stream-cipher"
categories = ["no-std", "cryptography", "wasm"]

[dependencies]
keccak = "0.1.5"

[dev-dependencies]
benchmark-simple = "0.1.9"
aes = "0.8.4"
ctr = "0.9.2"
getrandom = "0.2.15"

[[bench]]
name = "benchmark"
harness = false
