[package]
name = "seekable-stream-cipher"
version = "0.2.4"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2021"
description = "Seekable stream cipher and encryption/decryption"
readme = "README.md"
license = "MIT"
keywords = ["crypto", "ascon", "keccak", "stream", "cipher"]
homepage = "https://github.com/jedisct1/rust-seekable-stream-cipher"
repository = "https://github.com/jedisct1/rust-seekable-stream-cipher"
categories = ["no-std", "cryptography", "wasm"]

[dependencies]
keccak = "0.2.0"

[dev-dependencies]
benchmark-simple = "0.1.10"
aes = "0.9.0"
ctr = "0.10.0"
getrandom = "0.4.2"

[[bench]]
name = "benchmark"
harness = false
